# wafer-inspection-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  WaferApp.vcxproj  WaferApp.vcxproj.filters  WaferInspection.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
include/: ImageLoader.h
src/: ImageLoader.cpp  main.cpp
